...
                "[youtube] jNQXAC9IVRw: Downloading webpage",
                "WARNING: [youtube] Falling back to generic n function search",
                "[info] jNQXAC9IVRw: Downloading 1 format(s): 18",
                "ERROR: unable to download video data: HTTP Error 403: Forbidden",
            ],
            totalLineCount: 5,
            title: "Me at the zoo"
        )
        .navigationTitle("Log")
        .navigationBarTitleDisplayMode(.inline)
    }
}

